--- a/views/index.pug
+++ b/views/index.pug
@@ -8,4 +8,4 @@ html
             source(src='/static/media/test.mp4')
             track(label='English' kind='subtitles' srclang='en' src='/static/media/test.vtt')
 
-    script(src='static/dist/js/bundle.min.js')
+    script(src='static/bundle.js')
