--- a/views/index.pug
+++ b/views/index.pug
@@ -8,4 +8,7 @@ html
             source(src='/static/media/test.mp4')
             track(label='English' kind='subtitles' srclang='en' src='/static/media/test.vtt')
 
+    div
+        a(href='/logout') Logout
+
     script(src='static/bundle.js')
