hardcoded suicide squad

--- a/views/index.pug
+++ b/views/index.pug
@@ -5,7 +5,7 @@ html
   body
     div(class='video-container')
         video(id='video' controls preload='metadata')
-            source(src='/static/media/test.mp4')
+            source(src='/static/media/Suicide.Squad.2016.1080p.BluRay.x264-[YTS.AG].mp4')
             track(label='English' kind='subtitles' srclang='en' src='/static/media/test.vtt')
 
     div
