--- a/views/video.pug
+++ b/views/video.pug
@@ -6,7 +6,7 @@ html
     div(class='video-container')
         video(id='video' controls preload='metadata')
             source(src=mediaRoot + movie.video)
-            if subtitle
+            if movie.subtitle
                 track(label='English' kind='subtitles' srclang='en' src=mediaRoot + movie.subtitle)
 
     div
