added subtitle for a movie

--- a/views/video.pug
+++ b/views/video.pug
@@ -1,6 +1,6 @@
 html
   head
-    title= title
+    title='Movie'
     link(rel='stylesheet', href='/static/css/style.css')
   body
     div(class='video-container')
