--- a/views/video.pug
+++ b/views/video.pug
@@ -2,9 +2,10 @@ html
   head
     title='Movie'
     link(rel='stylesheet', href='/static/css/style.css')
+    link(rel="stylesheet" href="https://cdn.plyr.io/2.0.11/plyr.css")
   body
     div(class='video-container')
-        video(id='video' controls preload='metadata')
+        video(id='video' controls poster="http://www.hlgjyl888.com/data/wallpapers/57/WDF_1035523.jpg" preload='metadata')
             source(src=mediaRoot + movie.video type='video/mp4')
             if movie.subtitle
                 track(label='English' kind='subtitles' srclang='en' src=mediaRoot + movie.subtitle)
