--- a/views/video.pug
+++ b/views/video.pug
@@ -1,6 +1,7 @@
 html
   head
     title='Movie'
+    meta(name='viewport' content='width=device-width, initial-scale=1')
     link(rel='stylesheet', href='/static/css/style.css')
     link(rel="stylesheet" href="https://cdn.plyr.io/2.0.11/plyr.css")
   body
