--- a/views/index.pug
+++ b/views/index.pug
@@ -1,19 +1,18 @@
+doctype html
 html
   head
-    title=title
-    meta(name='viewport' content='width=device-width, initial-scale=1')
-    link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' integrity='sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u' crossorigin='anonymous')
-    link(rel='stylesheet' href='/static/css/style.css')
+    include includes/head.pug
   body
     div(class='container')
-        h1='Peliculas'
+        include includes/navbar.pug
+        h1 Movies
         table(class='table table-striped')
             thead
                 tr
-                    th='Nombre'
+                    th Name
             tbody
                 each val in movies
                     tr
                         td=val.name
                         td
-                            a(href='/watch/' + val.path class='btn btn-primary')='Ver'
+                            a(href='/watch/' + val.path class='btn btn-primary')='Watch'
