added login page

--- a/views/includes/modal.pug
+++ b/views/includes/modal.pug
@@ -11,17 +11,17 @@
                             .col-md-6
                                 .form-group
                                     label Path
-                                    input.form-control(type="text" class="form-control" id="add-path" name="path" required)
+                                    input.form-control(placeholder='example' type='text' class='form-control' id='add-path' name='path' required)
                                 .form-group
                                     label Name
-                                    input.form-control(type="text" class="form-control" id="add-name" name="name" required)
+                                    input.form-control(placeholder='A Big Example' type='text' class='form-control' id='add-name' name='name' required)
                             .col-md-6
                                 .form-group
                                     label Video
-                                    input.form-control(type="text" class="form-control" id="add-video" name="video" required)
+                                    input.form-control(placeholder='/folder/example.mp4' type='text' class='form-control' id='add-video' name='video' required)
                                 .form-group
                                     label Subtitle
-                                    input.form-control(type="text" class="form-control" id="add-subtitle" name="subtitle")
+                                    input.form-control(placeholder='/folder/example-subititle.vtt' type='text' class='form-control' id='add-subtitle' name='subtitle')
                 .modal-footer
                     button.btn.btn-default(type='button', data-dismiss='modal') Close
                     button.btn.btn-primary(type='submit') Save
