--- a/views/index.pug
+++ b/views/index.pug
@@ -2,6 +2,7 @@ doctype html
 html
   head
     include includes/head.pug
+    link(rel="stylesheet" href="/static/css/sweetalert.css")
   body
     div.container
         include includes/navbar.pug
