--- a/views/login.pug
+++ b/views/login.pug
@@ -9,7 +9,7 @@ html
     body
         .login
             h1 Login
-            form(method='post')
-                input(type='text', name='u', placeholder='Username', required='required')
-                input(type='password', name='p', placeholder='Password', required='required')
+            form(method='post' action='/login')
+                input(type='text', name='username', placeholder='Username', required='required')
+                input(type='password', name='password', placeholder='Password', required='required')
                 button.btn.btn-primary.btn-block.btn-large(type='submit') Let me in.
