--- a/views/login.pug
+++ b/views/login.pug
@@ -3,6 +3,7 @@ html
     head
         meta(charset='UTF-8')
         title Login Form
+        meta(name="viewport" content="width=device-width, initial-scale=1")
         link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css')
         link(rel='stylesheet', href='/static/css/login.css')
         script(src='https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js')
