--- a/views/login.pug
+++ b/views/login.pug
@@ -2,7 +2,8 @@ doctype html
 html
     head
         meta(charset='UTF-8')
-        title Login Form
+        title Login
+        link(rel="shortcut icon" href="/static/img/movie.ico")
         meta(name="viewport" content="width=device-width, initial-scale=1")
         link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css')
         link(rel='stylesheet', href='/static/css/login.css')
