--- a/views/login.pug
+++ b/views/login.pug
@@ -15,3 +15,6 @@ html
                 input(type='text', name='username', placeholder='Username', required='required')
                 input(type='password', name='password', placeholder='Password', required='required')
                 button.btn.btn-primary.btn-block.btn-large(type='submit') Let me in.
+                if errors && errors.length > 0
+                    each error in errors
+                        p#login-error=error
