--- a/views/includes/modal.pug
+++ b/views/includes/modal.pug
@@ -1,5 +1,5 @@
 .modal.fade#add-modal(tabindex='-1', role='dialog')
-    .modal-dialog(role='document')
+    .modal-dialog.modal-sm(role='document')
         .modal-content
             .modal-header
                 button.close(type='button', data-dismiss='modal', aria-label='Close')
@@ -8,14 +8,10 @@
             form#add-movie(method='post' action='/movie/add')
                 .modal-body
                         .row
-                            .col-md-6
-                                .form-group
-                                    label Path
-                                    input.form-control(placeholder='example' type='text' class='form-control' id='add-path' name='path' required)
+                            .col-md-12
                                 .form-group
                                     label Name
                                     input.form-control(placeholder='A Big Example' type='text' class='form-control' id='add-name' name='name' required)
-                            .col-md-6
                                 .form-group
                                     label Video
                                     input.form-control(placeholder='/folder/example.mp4' type='text' class='form-control' id='add-video' name='video' required)
