--- a/views/index.pug
+++ b/views/index.pug
@@ -12,6 +12,7 @@ html
                     h1 Movies
                 .col-md-6
                     button.btn.btn-primary.pull-right#add-movie(type="button" data-toggle="modal" data-target="#add-modal") Add
+                    button.btn.btn-primary.pull-right#import-movies(type="button" data-toggle="modal" data-target="#import-modal") Import
             .row
                 table.table.table-striped
                     thead
@@ -25,4 +26,5 @@ html
                                 td
                                     a.btn.btn-primary.pull-right(href='/watch/' + val.path)='Watch'
     include includes/modal.pug
+    include includes/import.pug
     script(src='/static/bundle.js')
