wip on importer.js

--- a/views/includes/import.pug
+++ b/views/includes/import.pug
@@ -11,7 +11,7 @@
                             .col-md-12
                                 .form-group
                                     label Location
-                                    input.form-control(placeholder='/some/example' type='text' class='form-control' id='import-location' name='location' value='/Users/Josue/Documents/landmarker-web/app' required)
+                                    input.form-control(type='text' class='form-control' id='import-location' name='location' value='/home/josue/movies' required)
                 .modal-footer
                     button.btn.btn-default(type='button', data-dismiss='modal') Close
                     button.btn.btn-primary(type='submit') Save
