file upload is wip

--- a/views/includes/import.pug
+++ b/views/includes/import.pug
@@ -11,7 +11,7 @@
                             .col-md-12
                                 .form-group
                                     label Location
-                                    input.form-control(type='text' class='form-control' id='import-location' name='location' value='/Users/Josue/Desktop/media' required)
+                                    input.form-control(type='text' id='import-location' name='location' value='/Users/Josue/Desktop/media' required)
                             .col-md-12#import-body
                 .modal-footer
                     button.btn.btn-default(type='button', data-dismiss='modal') Close
