added files link to navbar;

--- a/views/includes/navbar.pug
+++ b/views/includes/navbar.pug
@@ -19,5 +19,8 @@ nav.navbar.navbar-default
             ul.nav.navbar-nav.navbar-right
                 li
                     a(href='/') Home
+            ul.nav.navbar-nav.navbar-right
+                li
+                    a(href='/file') Files
         // /.navbar-collapse
     // /.container-fluid
