--- a/views/404page.html
+++ b/views/404page.html
@@ -41,28 +41,8 @@
 	         <a href="index.html">Quatro</a>
 	      </div>   		
    	</div>   
-
-   	<a class="menu-toggle" href="#"><span>Menu</span></a>	
+	
    </header> <!-- /header -->
-
-   <!-- navigation 
-   ================================================== -->
-   <nav id="menu-nav-wrap">
-
-   	<h5>Site Pages</h5>   	
-		<ul class="nav-list">
-			<li><a href="#" title="">Home</a></li>
-			<li><a href="#" title="">About</a></li>
-			<li><a href="#" title="">Portfolio</a></li>
-			<li><a href="#" title="">Blog</a></li>
-			<li><a href="#" title="">FAQ</a></li>					
-			<li><a href="#" title="">Contact</a></li>					
-		</ul>
-
-		<h5>Some Text</h5>  
-		<p>Lorem ipsum Non non Duis adipisicing pariatur eu enim Ut in aliqua dolor esse sed est in sit exercitation eiusmod aliquip consequat.</p>
-
-	</nav>
 
 	<!-- main content
    ================================================== -->
@@ -79,14 +59,9 @@
 			  			<h1 class="kern-this">404 Error.</h1>
 			  			<p>
 						Oooooops! Looks like nothing was found at this location.
-						Maybe try on of the links below, click on the top menu
-						or try a search?
+						Maybe try on of the links below?
 			  			</p>
 
-			  			<div class="search">
-				      	<form>
-								<input type="text" id="s" name="s" class="search-field" placeholder="Type and hit enter …">
-							</form>
 				      </div>	   			
 
 			   	</div> <!-- /twelve --> 		   			
@@ -95,22 +70,10 @@
 
 		   <footer>
 		   	<div class="row">
-
-		   		<div class="col-seven tab-full social-links pull-right">
-			   		<ul>
-				   		<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-					      <li><a href="#"><i class="fa fa-behance"></i></a></li>
-					      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-					      <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-					      <li><a href="#"><i class="fa fa-instagram"></i></a></li>   			
-				   	</ul>
-			   	</div>
 		   			
 		  			<div class="col-five tab-full bottom-links">
 			   		<ul class="links">
-				   		<li><a href="#">Homepage</a></li>
-				         <li><a href="#">About</a></li>
-				         <li><a href="mailto:joe@quatro.com">Report Error</a></li>			                    
+				   		<li><a href="/">Homepage</a></li>	                    
 				   	</ul>
 
 				   	<div class="credits">
